@@ -16,11 +16,11 @@
 
 package com.badlogic.gdx.backends.gwt.preloader;
 
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.PrintWriter;
+import java.io.*;
+import java.math.BigInteger;
 import java.net.URLConnection;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -28,6 +28,7 @@ import java.util.Map.Entry;
 
 import com.badlogic.gdx.backends.gwt.preloader.AssetFilter.AssetType;
 import com.badlogic.gdx.utils.GdxRuntimeException;
+import com.badlogic.gdx.utils.StreamUtils;
 import com.google.gwt.core.ext.BadPropertyValueException;
 import com.google.gwt.core.ext.ConfigurationProperty;
 import com.google.gwt.core.ext.Generator;
@@ -43,10 +44,12 @@ import com.google.gwt.user.rebind.SourceWriter;
  * @author mzechner */
 public class PreloaderBundleGenerator extends Generator {
 	private class Asset {
+		String filePathOrig;
 		FileWrapper file;
 		AssetType type;
 
-		public Asset (FileWrapper file, AssetType type) {
+		public Asset (String filePathOrig, FileWrapper file, AssetType type) {
+			this.filePathOrig = filePathOrig;
 			this.file = file;
 			this.type = type;
 		}
@@ -57,7 +60,7 @@ public class PreloaderBundleGenerator extends Generator {
 		System.out.println(new File(".").getAbsolutePath());
 		String assetPath = getAssetPath(context);
 		String assetOutputPath = getAssetOutputPath(context);
-		if ( assetOutputPath == null ){
+		if (assetOutputPath == null) {
 			assetOutputPath = "war/";
 		}
 		AssetFilter assetFilter = getAssetFilter(context);
@@ -65,14 +68,12 @@ public class PreloaderBundleGenerator extends Generator {
 		FileWrapper source = new FileWrapper(assetPath);
 		if (!source.exists()) {
 			source = new FileWrapper("../" + assetPath);
-			if (!source.exists())
-				throw new RuntimeException("assets path '" + assetPath
-					+ "' does not exist. Check your gdx.assetpath property in your GWT project's module gwt.xml file");
+			if (!source.exists()) throw new RuntimeException("assets path '" + assetPath
+				+ "' does not exist. Check your gdx.assetpath property in your GWT project's module gwt.xml file");
 		}
-		if (!source.isDirectory())
-			throw new RuntimeException("assets path '" + assetPath
-				+ "' is not a directory. Check your gdx.assetpath property in your GWT project's module gwt.xml file");
-		System.out.println("Copying resources from " + assetPath + " to " + assetOutputPath );
+		if (!source.isDirectory()) throw new RuntimeException("assets path '" + assetPath
+			+ "' is not a directory. Check your gdx.assetpath property in your GWT project's module gwt.xml file");
+		System.out.println("Copying resources from " + assetPath + " to " + assetOutputPath);
 		System.out.println(source.file.getAbsolutePath());
 		FileWrapper target = new FileWrapper("assets/"); // this should always be the war/ directory of the GWT project.
 		System.out.println(target.file.getAbsolutePath());
@@ -82,52 +83,61 @@ public class PreloaderBundleGenerator extends Generator {
 		if (target.exists()) {
 			if (!target.deleteDirectory()) throw new RuntimeException("Couldn't clean target path '" + target + "'");
 		}
-		ArrayList<Asset> assets = new ArrayList<Asset>();
+		ArrayList<Asset> assets = new ArrayList<>();
 		copyDirectory(source, target, assetFilter, assets);
 
 		// Now collect classpath files and copy to assets
 		List<String> classpathFiles = getClasspathFiles(context);
-		for (String classpathFile : classpathFiles) {			
+		for (String classpathFile : classpathFiles) {
 			if (assetFilter.accept(classpathFile, false)) {
 				try {
 					InputStream is = context.getClass().getClassLoader().getResourceAsStream(classpathFile);
-					FileWrapper dest = target.child(classpathFile);
-					dest.write(is, false);
-					assets.add(new Asset(dest, assetFilter.getType(dest.path())));
+					byte[] bytes = StreamUtils.copyStreamToByteArray(is);
 					is.close();
+					FileWrapper origFile = target.child(classpathFile);
+					FileWrapper destFile = target.child(fileNameWithMd5(origFile, bytes));
+					destFile.writeBytes(bytes, false);
+					assets.add(new Asset(origFile.path(), destFile, assetFilter.getType(destFile.path())));
 				} catch (IOException e) {
 					e.printStackTrace();
-				}			
+				}
 			}
-		}		
-		
-		HashMap<String, ArrayList<Asset>> bundles = new HashMap<String, ArrayList<Asset>>();
+		}
+
+		HashMap<String, ArrayList<Asset>> bundles = new HashMap<>();
 		for (Asset asset : assets) {
 			String bundleName = assetFilter.getBundleName(asset.file.path());
 			if (bundleName == null) {
 				bundleName = "assets";
-			}			
+			}
 			ArrayList<Asset> bundleAssets = bundles.get(bundleName);
 			if (bundleAssets == null) {
-				bundleAssets = new ArrayList<Asset>();
+				bundleAssets = new ArrayList<>();
 				bundles.put(bundleName, bundleAssets);
 			}
 			bundleAssets.add(asset);
 		}
 
+		// Write the tokens for Preloader.preload()
 		for (Entry<String, ArrayList<Asset>> bundle : bundles.entrySet()) {
 			StringBuilder sb = new StringBuilder();
 			for (Asset asset : bundle.getValue()) {
-				String path = asset.file.path().replace('\\', '/').replace(assetOutputPath, "").replaceFirst("assets/", "");
-				if (path.startsWith("/")) path = path.substring(1);
+				String pathOrig = asset.filePathOrig.replace('\\', '/').replace(assetOutputPath, "").replaceFirst("assets/", "");
+				if (pathOrig.startsWith("/")) pathOrig = pathOrig.substring(1);
+				String pathMd5 = asset.file.path().replace('\\', '/').replace(assetOutputPath, "").replaceFirst("assets/", "");
+				if (pathMd5.startsWith("/")) pathMd5 = pathMd5.substring(1);
 				sb.append(asset.type.code);
 				sb.append(":");
-				sb.append(path);
+				sb.append(pathOrig);
+				sb.append(":");
+				sb.append(pathMd5);
 				sb.append(":");
 				sb.append(asset.file.isDirectory() ? 0 : asset.file.length());
 				sb.append(":");
 				String mimetype = URLConnection.guessContentTypeFromName(asset.file.name());
 				sb.append(mimetype == null ? "application/unknown" : mimetype);
+				sb.append(":");
+				sb.append(asset.file.isDirectory() || assetFilter.preload(pathOrig) ? '1' : '0');
 				sb.append("\n");
 			}
 			target.child(bundle.getKey() + ".txt").writeString(sb.toString(), false);
@@ -135,10 +145,11 @@ public class PreloaderBundleGenerator extends Generator {
 		return createDummyClass(logger, context);
 	}
 
-	private void copyFile (FileWrapper source, FileWrapper dest, AssetFilter filter, ArrayList<Asset> assets) {
-		if (!filter.accept(dest.path(), false)) return;
+	private void copyFile (FileWrapper source, String filePathOrig, FileWrapper dest, AssetFilter filter,
+		ArrayList<Asset> assets) {
+		if (!filter.accept(filePathOrig, false)) return;
 		try {
-			assets.add(new Asset(dest, filter.getType(dest.path())));
+			assets.add(new Asset(filePathOrig, dest, filter.getType(dest.path())));
 			dest.write(source.read(), false);
 		} catch (Exception ex) {
 			throw new GdxRuntimeException("Error copying source file: " + source + "\n" //
@@ -148,21 +159,22 @@ public class PreloaderBundleGenerator extends Generator {
 
 	private void copyDirectory (FileWrapper sourceDir, FileWrapper destDir, AssetFilter filter, ArrayList<Asset> assets) {
 		if (!filter.accept(destDir.path(), true)) return;
-		assets.add(new Asset(destDir, AssetType.Directory));
+		assets.add(new Asset(destDir.path(), destDir, AssetType.Directory));
 		destDir.mkdirs();
 		FileWrapper[] files = sourceDir.list();
-		for (int i = 0, n = files.length; i < n; i++) {
-			FileWrapper srcFile = files[i];
-			FileWrapper destFile = destDir.child(srcFile.name());
-			if (srcFile.isDirectory())
+		for (FileWrapper srcFile : files) {
+			if (srcFile.isDirectory()) {
+				FileWrapper destFile = destDir.child(srcFile.name());
 				copyDirectory(srcFile, destFile, filter, assets);
-			else
-				copyFile(srcFile, destFile, filter, assets);
+			} else {
+				FileWrapper destFile = destDir.child(fileNameWithMd5(srcFile, srcFile.readBytes()));
+				copyFile(srcFile, destDir.child(srcFile.name()).path(), destFile, filter, assets);
+			}
 		}
 	}
 
 	private AssetFilter getAssetFilter (GeneratorContext context) {
-		ConfigurationProperty assetFilterClassProperty = null;
+		ConfigurationProperty assetFilterClassProperty;
 		try {
 			assetFilterClassProperty = context.getPropertyOracle().getConfigurationProperty("gdx.assetfilterclass");
 		} catch (BadPropertyValueException e) {
@@ -174,7 +186,7 @@ public class PreloaderBundleGenerator extends Generator {
 		String assetFilterClass = assetFilterClassProperty.getValues().get(0);
 		if (assetFilterClass == null) return new DefaultAssetFilter();
 		try {
-			return (AssetFilter)Class.forName(assetFilterClass).newInstance();
+			return (AssetFilter)Class.forName(assetFilterClass).getDeclaredConstructor().newInstance();
 		} catch (Exception e) {
 			throw new RuntimeException("Couldn't instantiate custom AssetFilter '" + assetFilterClass
 				+ "', make sure the class is public and has a public default constructor", e);
@@ -182,7 +194,7 @@ public class PreloaderBundleGenerator extends Generator {
 	}
 
 	private String getAssetPath (GeneratorContext context) {
-		ConfigurationProperty assetPathProperty = null;
+		ConfigurationProperty assetPathProperty;
 		try {
 			assetPathProperty = context.getPropertyOracle().getConfigurationProperty("gdx.assetpath");
 		} catch (BadPropertyValueException e) {
@@ -194,15 +206,14 @@ public class PreloaderBundleGenerator extends Generator {
 				"No gdx.assetpath defined. Add <set-configuration-property name=\"gdx.assetpath\" value=\"relative/path/to/assets/\"/> to your GWT projects gwt.xml file");
 		}
 		String paths = assetPathProperty.getValues().get(0);
-		if(paths == null) {
+		if (paths == null) {
 			throw new RuntimeException(
 				"No gdx.assetpath defined. Add <set-configuration-property name=\"gdx.assetpath\" value=\"relative/path/to/assets/\"/> to your GWT projects gwt.xml file");
 		} else {
-			ArrayList<String> existingPaths = new ArrayList<String>();
 			String[] tokens = paths.split(",");
-			for(String token: tokens) {
+			for (String token : tokens) {
 				System.out.println(token);
-				if(new FileWrapper(token).exists() || new FileWrapper("../" + token).exists()) {
+				if (new FileWrapper(token).exists() || new FileWrapper("../" + token).exists()) {
 					return token;
 				}
 			}
@@ -210,9 +221,9 @@ public class PreloaderBundleGenerator extends Generator {
 				"No valid gdx.assetpath defined. Fix <set-configuration-property name=\"gdx.assetpath\" value=\"relative/path/to/assets/\"/> in your GWT projects gwt.xml file");
 		}
 	}
-	
+
 	private String getAssetOutputPath (GeneratorContext context) {
-		ConfigurationProperty assetPathProperty = null;
+		ConfigurationProperty assetPathProperty;
 		try {
 			assetPathProperty = context.getPropertyOracle().getConfigurationProperty("gdx.assetoutputpath");
 		} catch (BadPropertyValueException e) {
@@ -222,37 +233,34 @@ public class PreloaderBundleGenerator extends Generator {
 			return null;
 		}
 		String paths = assetPathProperty.getValues().get(0);
-		if(paths == null) {
+		if (paths == null) {
 			return null;
 		} else {
-			ArrayList<String> existingPaths = new ArrayList<String>();
 			String[] tokens = paths.split(",");
 			String path = null;
-			for(String token: tokens) {
+			for (String token : tokens) {
 				if (new FileWrapper(token).exists() || new FileWrapper(token).mkdirs()) {
 					path = token;
 				}
 			}
-			if (path != null && !path.endsWith("/")){
+			if (path != null && !path.endsWith("/")) {
 				path += "/";
-			}			
+			}
 			return path;
 		}
 	}
 
-	private List<String> getClasspathFiles(GeneratorContext context) {
-		List<String> classpathFiles = new ArrayList<String>();
+	private List<String> getClasspathFiles (GeneratorContext context) {
+		List<String> classpathFiles = new ArrayList<>();
 		try {
 			ConfigurationProperty prop = context.getPropertyOracle().getConfigurationProperty("gdx.files.classpath");
-			for (String value : prop.getValues()) {
-				classpathFiles.add(value);
-			}
+			classpathFiles.addAll(prop.getValues());
 		} catch (BadPropertyValueException e) {
 			// Ignore
-		}		
+		}
 		return classpathFiles;
 	}
-	
+
 	private String createDummyClass (TreeLogger logger, GeneratorContext context) {
 		String packageName = "com.badlogic.gdx.backends.gwt.preloader";
 		String className = "PreloaderBundleImpl";
@@ -266,4 +274,24 @@ public class PreloaderBundleGenerator extends Generator {
 		sourceWriter.commit(logger);
 		return packageName + "." + className;
 	}
+
+	private static String fileNameWithMd5 (FileWrapper fw, byte[] bytes) {
+		String md5;
+		try {
+			MessageDigest digest = MessageDigest.getInstance("MD5");
+			digest.update(bytes);
+			md5 = String.format("%032x", new BigInteger(1, digest.digest()));
+		} catch (NoSuchAlgorithmException e) {
+			// Fallback
+			md5 = String.valueOf(System.currentTimeMillis());
+		}
+
+		String nameWithMd5 = fw.nameWithoutExtension() + "-" + md5;
+		String extension = fw.extension();
+		if (!extension.isEmpty() || fw.name().endsWith(".")) {
+			nameWithMd5 = nameWithMd5 + "." + extension;
+		}
+		return nameWithMd5;
+	}
+
 }
